# tps-c

./: .gitignore  CMakeLists.txt  resultados-seq.txt  run.sh  runAll.sh  todo.txt  tps.conf  tps.conf.example  tps.confs
configurations/: tps.config1  tps.config10  tps.config11  tps.config2  tps.config3  tps.config4  tps.config5  tps.config6  tps.config7  tps.config8  tps.config9
confis/: generateConfig.py  tps.conf1  tps.conf10  tps.conf2  tps.conf3  tps.conf4  tps.conf5  tps.conf6  tps.conf7  tps.conf8  tps.conf9
images/: deformImage.py
pythonScripts/: deformImage.py  generateConfig.py  generateConfigSift.py  generateConfigSurf.py  generateKeyPoints.py
src/: OPCVlinearsystems.cxx  OPCVlinearsystems.h  armalinearsystems.cxx  armalinearsystems.h  basictps.cxx  basictps.h  cplinearsystems.h  cudalinearsystems.cxx  cudalinearsystems.h  cudamemory.cxx  cudamemory.h  cudatps.cu  cudatps.cxx  cudatps.h  cutps.cu  cutps.h  featuredetector.h  featurefactory.cxx  featurefactory.h  featuregenerator.cxx  featuregenerator.h  image.cxx  image.h  main.cxx  optimizedtps.cxx  optimizedtps.h  paralleltps.cxx  paralleltps.h  surf.cxx  surf.h  tps.cxx  tps.h  tps_kernel.cu
src/feature/: featuredetector.h  featuregenerator.cxx  featuregenerator.h  sift.h  surf.cxx  surf.h  tps.h
src/image/: image.cxx  image.h  imagedeformation.cxx  imagedeformation.h  imageloader.h  itkimagehandler.cxx  itkimagehandler.h  itkimageloader.cxx  itkimageloader.h  opcvimagehandler.cxx
src/linearsystem/: OPCVlinearsystems.cxx  OPCVlinearsystems.h  armalinearsystems.cxx  armalinearsystems.h  cplinearsystems.cxx  cplinearsystems.h  cudalinearsystems.cxx  cudalinearsystems.h
src/tps/: basictps.cxx  basictps.h  cudatps.cxx  cudatps.h  cutps.cu  cutps.h  paralleltps.cxx  paralleltps.h  tps.h
src/utils/: cudamemory.cxx  cudamemory.h  cudastream.h  mastercontroller.cxx  mastercontroller.h  tpsinstance.cxx  tpsinstance.h
